--- a/asteroid_apocalypse/makefile
+++ b/asteroid_apocalypse/makefile
@@ -5,7 +5,7 @@
 # Replace these targets with your target (hex file) name, including the .hex part.
 
 TARGETS = \
-	game_controller.hex
+	z_main.hex
 
 # Set the name of the folder containing libcab202_teensy.a
 
